# hackathon-assemblee-2026

./: .env.example  .gitignore  CLAUDE.md  DEFI.md  Makefile  README.md  SETUP.md  package-lock.json  pyproject.toml  slides.md
.github/workflows/: deploy-pages.yml  pages.yml
benchmarks/: plot_benchmarks.py  results.md
data/fixtures/: README.md
docs/: README.md  architecture.md  defis.md  faq.md  gpu.md  mcp.md  orga.md  pitch.md  ressources-exploitees.md  ressources.md  roadmap.md  stack.md
docs/schema/: README.md
examples/mojo/: hello.mojo  retrieval_similarity.py
features/: confiance.feature  environment.py
features/steps/: confiance_steps.py
hackathon-an-2026/: .env.example  DEFI.md  README.md
hackathon-an-2026/benchmarks/: gpu_compare.py  gpu_results.json  results.md
hackathon-an-2026/demo/: demo_site.yaml
hackathon-an-2026/docs/: README.md  architecture.md  canutes-schema.md  gpu.md  note-demo-hallucination.md  pitch.md
hackathon-an-2026/paper/: .gitignore  main.tex  references.bib
hackathon-an-2026/poc/: build_static.py  requirements.txt
hackathon-an-2026/presentation/: package-lock.json  package.json  slides.md
hackathon-an-2026/src/: pertinence.py
hackathon-an-2026/user-site/: index.html
notebooks/: colab_max_mistral.ipynb
paper/: main.tex  references.bib
poc/: build_static.py
presentation/: package.json  slides.md  style.css
schema-site/: index.html
site/: index.html
src/: api.py  bench.py  citations.py  cli.py  config.py  guarantees.py  pipeline.py  verify.py
tools/: bench_eval.py  gen_schema.py
(+191 files in other folders)
