[project]
name = "hackathon-assemblee-2026"
version = "0.1.0"
description = "IA de confiance juridique — assistant sourcé (Assemblée nationale 2026)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "behave>=1.2.6",
    "openai>=1.40",
    "rich>=13.7",
]

# Accès DB PostgreSQL direct (optionnel). Active-le avec :
#   uv sync --extra db
[project.optional-dependencies]
db = ["psycopg[binary]>=3.2"]

[tool.uv]
package = false
