[project]
name = "hackathon-assemblee-2026"
version = "0.1.0"
description = "IA de confiance juridique — assistant sourcé (Assemblée nationale 2026)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "behave>=1.2.6",
    "openai>=1.40",
    "rich>=13.7",
]

# Extras optionnels :
#   uv sync --extra db    -> accès PostgreSQL direct (Canutes)
#   uv sync --extra api   -> API HTTP "integration-ready" (FastAPI)
[project.optional-dependencies]
db = ["psycopg[binary]>=3.2"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]

[tool.uv]
package = false
